# Atlas

./: ..gitignore.un~  .gitignore  .gitignore~  CMakeLists.txt  LICENSE  Process Diagram.xml  README.md  Untitled Diagram.xml  build.sh  deploy.sh
arduino/: motor_driver.c  motor_driver.ino
arduino/Encoder Test/lib/DS2778/: DS2778.h
arduino/Encoder Test/src/: main.cpp
arduino/motor_driver/: motor_driver.h  motor_driver.ino
arduino/motor_test/: motor_test.cpp  motor_test.ino
cad/electronics/AtlasMCU_STM32/: .gitignore  AtlasMCU_STM32.OutJob  AtlasMCU_STM32.PcbLib  AtlasMCU_STM32.PrjPcb  AtlasMCU_STM32.PrjPcbStructure  AtlasMCU_STM32.SCHLIB  AtlasMCU_STM32.SchDoc  AtlasMCU_STM32_PCB.PcbDoc  CAMtastic1.Cam  MCU_Power.SchDoc  MCU_Sensors.SchDoc  README.md
cad/electronics/AtlasMCU_STM32/PCB_Project/: AtlasMCU_STM.SchDoc  (+2 more)
cad/electronics/AtlasPD/: 5V Buck Converter-cache.lib  5V Buck Converter.csv  5V Buck Converter.kicad_pcb  5V Buck Converter.kicad_pcb-bak  5V Buck Converter.kicad_prl  5V Buck Converter.kicad_pro  5V Buck Converter.kicad_sch  5V Buck Converter.kicad_sch-bak  5V Buck Converter.net  5V Buck Converter.pro  5V Buck Converter.sch  5V Buck Converter.sch-bak  5V Buck Converter.xml  ArduinoMKRZero.kicad_sch  AtlasPD-cache.lib  AtlasPD.csv  AtlasPD.kicad_pcb  AtlasPD.kicad_pcb-bak  AtlasPD.kicad_prl  AtlasPD.kicad_pro  AtlasPD.kicad_sch  AtlasPD.net  AtlasPD.pro  AtlasPD.sch  AtlasPD.sch-bak  AtlasPD.step  AtlasPD.wrl  AtlasPD.xml  Battery Board Enclosure.SLDPRT  Battery Board.SLDASM  Battery Board.step  BatteryBoard.step  Microcontroller-cache.lib  Microcontroller.kicad_pcb  Microcontroller.kicad_pcb-bak  Microcontroller.kicad_prl  Microcontroller.kicad_pro  Microcontroller.kicad_sch  Microcontroller.sch  Microcontroller.sch-bak  (+11 more)
cad/electronics/STM_Cerberus/: MCU_Cerberus.SchDoc  MCU_Main.SchDoc  MCU_Power.SchDoc  MCU_Sensors.SchDoc  STM_Cerberus.PrjPcb  STM_Cerberus.PrjPcbStructure  STM_Cerberus_PCB.PcbDoc
docs/: README.md
include/beaglebone/: L298N.h  PWM.h
include/util/: Spline.h
src/: CMakeLists.txt  main.cpp
src/beaglebone/: GPIO.cpp  GPIO.h  L298N.cpp  L298N.h  PWM.cpp  PWM.h
src/ui/: Player.cpp  Player.h
src/util/: Calculations.cpp  Calculations.h  Path.cpp  Path.h  Point2D.cpp  Point2D.h  Spline.cpp  Spline.h  i2ctest.c
(+83 files in other folders)
